--- a/templates/main/case.html
+++ b/templates/main/case.html
@@ -20,16 +20,12 @@
             del("btn3","ipt1","table","checkbox","checknum","myAlert1");
             paging();
             search();
+            display("table","td",25,25);//列表数据一旦超过多少个字符串就只显示，多少个字符串+..
             check("table","allcheck","checkbox","checknum"); // 根据返回值去勾选对应列
             makepy("btnmakepy","iptmakepy","table","checkbox","checknum","myAlert2");
             funisError("tipModalLabel","tipModal");//判断提交的表单是否错误
         });
 
-        function jump(obj){
-            case_name=$(obj).parent().parent().find("td").eq(2).text()
-            url = "/step/?page=1&step_name=&case_name="+case_name+"&method=0&steplevel=&select=1&checkedenv_ids=None"
-            window.parent.openTab(url);
-        }
         //搜索
         function search(){
             var elementsStatus="#select1 option";
@@ -42,9 +38,6 @@
             var selectmodules="{{ selectmodules }}";
             get_option(elementsmodules,selectmodules);
 
-            $("#btn4").click(function(){
-                $("#seach").submit();
-            });
             //根据项目名去获取模块名
             $("#selectproject").change(function(){
                 if($(this).val()==0){
@@ -103,8 +96,6 @@
                             });
                         }
                         env_value=env_value.next();
-                        //alert(env_value.text());
-                        //console.log(env_value.attr('titlevalue'))
                         env[i]=env_value.attr('titlevalue');
                     }
                     //alert(env)
@@ -255,7 +246,7 @@
                         <td titlevalue={{ project_listnames }}>{{ project_listnames }}</td>
                         <td titlevalue={{ case.Modules }}>{{ case.Modules }}</td>
                         <td titlevalue={{ case.api }}>{{ case.api }}</td>
-                        <td titlevalue={{ case.stepCount }}><a onclick="jump(this)">{{ case.stepCount }}</a></td>
+                        <td titlevalue={{ case.stepCount }}><a onclick="jump(this,'step','/step/?page=1&step_name=&method=0&select=1&checkedenv_ids=None&case_name=')">{{ case.stepCount }}</a></td>
                         <td titlevalue={{ case.version }}>{{ case.version }}</td>
                         <td titlevalue={{ case.case_desc }}>{{ case.case_desc }}</td>
                         {% if case.status %}
@@ -306,7 +297,7 @@
                     </div>
                     <div class="form-group">
                         <label  for="api">接口路径</label>
-                        <input  type="text" class="form-control" name="api" placeholder="请输入接口路径" required>
+                        <input  type="text" class="form-control" name="api" placeholder="ex:/login/login_on" required>
                     </div>
                     <div class="form-group">
                         <label  for="version">版本</label>
@@ -374,7 +365,11 @@
                     </div>
                     <div class="form-group">
                         <label  for="api">接口路径</label>
-                        <input  type="text" class="ipt form-control" name="api" placeholder="请输入接口路径" required>
+                        <input  type="text" class="ipt form-control" name="api" placeholder="ex:/login/login_on" required>
+                    </div>
+                    <div class="form-group" style="display: none">
+                        <label  for="version" >生效用例数</label>
+                        <input  type="text" class="ipt form-control" name="stepCount" placeholder="请输入生效用例数" >
                     </div>
                     <div class="form-group">
                         <label  for="version">版本</label>
